# game_engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Notes.md  README.md  VulkanGameEngine.sln  game_engine.sln  game_engine.vcxproj  game_engine.vcxproj.filters  genVSProj.bat  premake5.lua  run.bat
VulkanGameEngine/: VulkanGameEngine.vcxproj  premake5.lua
VulkanGameEngine/src/: main.cpp
dependencies/: premake5.lua
game_engine/: game_engine.vcxproj  game_engine.vcxproj.filters  premake5.lua
game_engine/src/: main.cpp  pch.h
game_engine/src/core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Core.h  EntryPoint.h  Platform.h  SimplexNoise.cpp  SimplexNoise.h  Time.cpp  Time.h
game_engine/src/ecs/: ComponentArray.h  Components.h  Entity.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityScript.h  EntityTypes.h  Scene.cpp  Scene.h  ScriptableEntity.h
game_engine/src/hid/: Input.h  Window.h
game_engine/src/physics/: AABB.cpp  AABB.h  SphereCollider.h  TriangleBVH.cpp  TriangleBVH.h
game_engine/src/renderer/: Camera.cpp  Camera.h  Light.h  Renderer.h
game_engine/src/scene/: Scene.cpp  Scene.h
game_engine/src/scripts/: CameraController.h
sandbox/: premake5.lua  sandbox.vcxproj
sandbox/assets/materials/: blue_pbr.mat  brown_grey_pbr.mat  dark_green_pbr.mat  default_white.mat  red_pbr.mat  tree_material.mat  viking_room.mat
sandbox/src/: CubeMarchTerrain.h  EnemyManager.h  PlayerController.h  TerrainManager.h  main.cpp
src/: Core.h  main.cpp
src/hid/: Window.cpp  Window.h
src/renderer/: Renderer.h
(+65 files in other folders)
